--- a/index.html
+++ b/index.html
@@ -1,92 +1,111 @@
-
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title> Lebo Profile Page </title>
-    <link rel="stylesheet" href="styles/styles.css" type="text/css">
-     <meta name="author" content="Lebo Kanyane">
-     <link rel="shortcut icon" href="images/lk.ico" type=image/x-icon
-</head>
-<body>
-  <header>
+     <head>
+       <meta charset="utf-8">
+       <title>Lebo's profile page</title>
+       <link rel="stylesheet" href="styles/styles.css">
+       <meta name="author" content="Lebo Kanyane">
+       <meta name="description" content="Lebo Kanyanes portfolio page with all his lifes work.">
+       <link rel="shortcut icon" href="images/lk.ico" type="image/x-icon">
+       <!-- we need to find and doanload a favicon
+       include metatags for facebook
+       include mta tags for instagram -->
+      </head>
 
-
-
-      <div class="topnav" id="mytopnav">
-        <a href="#home" class="active">home</a>
-        <a href="#quote">quote</a>
-        <a href="#contact">contact</a>
-        <div class="dropdown">
-
-          <button class="drobtn">portfolio
-<i class=fa fa
-
-
-
+  <body>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#quote">Quote</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
     </nav>
 
+   <header id="home">
+      <div class="headerFigure">
+        <img src="images/leo.jpg"alt="profile picture">
+        <h2>Lebo Kanyane</h2>
+        <p> <strong>Student at 4IA</strong> </p>
+      </div>
+   </header>
 
-       </nav>
-    <!-- put navigation menu just below here -->
-    <img src="images/leo.jpg" alt="profile picture">
- <img src="images/leo.jpg alt="">
-    <h1>Lebo Kanyane</h1>
-     <p> Web Development Student at 4IA
+    <div id="quote">
+     <blockquote cite="">
+       <p>Where You Are, Is Not Who You Are.  Circumstances</p>
+       <p id="saidby"title="From The Book Salt"><strong>-Nayyirah Waheed</strong>"</p>
+     </blockquote>
+    </div>
 
+   <main id="portfolio">
 
-  </body>
-
-<main>
-<p>"we come and then we go.and in between the bookends,we are some kind of story.
-but for the life of me,or the death of me i ant figure out if it means anything at all."</P>
-<p>Owen Lindley.</p>
-
-
-<h2>portfolio</h2>
-
-
-
-
-
-
-
-
-
+      <figure>
+        <img src="images/shot.png"alt="">
+         <figcaption>
+          <h2>Project 1</h2>
+          <p>Football Hub Website
+          Providing Match Analysis.</p>
+         </figcaption>
+      </figure>
 
 
-
-
-
-
-
-
-
+      <figure>
+        <img src="images/lebo.jpg"alt="">
+         <figcaption>
+           <h2> Loch Vaal Hotel</h2>
+            <p>-Photocred.Angel </p>
+         </figcaption>
+      </figure>
 
 
 
+     <figure>
+       <img src="images/lebol.jpg"alt="">
+        <figcaption>
+         <h2> Montecasino</h2>
+         <p> Photocred -Fikile Mbewe</p>
+       </figcaption>
+     </figure>
+
+     <figure>
+         <img src="images/fairy.jpg"alt="">
+          <figcaption>
+            <h2> fairy </h2>
+            <p> Photocred -Audrey Chabalala </p>
+          </figcaption>
+      </figure>
+
+  </main>
 
 
+<div id="contact">
+  <form class=""action="mailto:lebogangkanyane@gmial.com">
+    <input type="text"name="firstname" placeholder="First Name">
+    <input type="text"name="lastname" placeholder="Last Name">
+    <select name="country">
+      <option value="BOT">Botswana</option>
+      <option value="DRC">Democratic Republic Of Congo</option>
+      <option value="GHA">Ghana</option>
+      <option value="LSO">Lesotho</option>
+      <option value="MOZ">Mozambique</option>
+      <option value="NIG">Nigeria</option>
+      <option value="MOR">Morocco</option>
+      <option value="RSA">South Africa</option>
+      <option value="ZIM">Zimbabwe</option>
+    </select>
+    <textarea name="body" placeholder="write your message here"></textarea>
+    <input type="submit">
+  </form>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14351.239477569505!2d28.014288!3d-25.941467!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x13b742e283a157d!2seHUB+Diepsloot!5e0!3m2!1sen!2sza!4v1519889489386" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<footer>
+  <ul>
+    <li><a href="#home"><strong>Home</strong></a></li>
+    <li><a href="#quote"><strong>Quote</strong></a><li>
+    <li><a href="#portfolio"><strong>Portfolio</strong></a><li>
+    <li><a href="#contact"><strong>Contact</strong></a><li>
+  </ul>
+  Copyright (c) 2017 Copyright Holder All Rights Reserved.<br>
+  Created By Lebo Kanyane under MIT license.<br>
+</footer>
 
 </html>
